# swimcuttimes.com

./: .env.dev.example  .env.example  .env.local.example  .env.prod.example  .gitignore  CLAUDE.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/data/import/: greenwood-meets.csv  greenwood-roster.csv
backend/data/import/templates/: meets.csv  roster.csv  times.csv
backend/src/swimcuttimes/: config.py  logging.py
backend/src/swimcuttimes/api/: app.py  auth.py  dependencies.py
backend/src/swimcuttimes/api/routes/: __init__.py  auth.py  events.py  follows.py  health.py  meets.py  suits.py  swim_times.py  swimmers.py  teams.py  time_standards.py  times.py
backend/src/swimcuttimes/cli/: app.py
backend/src/swimcuttimes/dao/: __init__.py  base.py  event_dao.py  meet_dao.py  suit_dao.py  swim_time_dao.py  swimmer_dao.py  team_dao.py  time_standard_dao.py
backend/src/swimcuttimes/models/: __init__.py  event.py  meet.py  suit.py  swim_time.py  swimmer.py  team.py  time_standard.py  user.py
backend/src/swimcuttimes/parser/: __init__.py  converter.py  schemas.py  vision_parser.py
backend/src/swimcuttimes/services/: __init__.py  event_parser.py  import_schemas.py  import_service.py
backend/tests/: __init__.py
backend/tests/api/: conftest.py  test_meets.py  test_swim_times.py  test_swimmers.py  test_teams.py  test_times.py  test_times_integration.py
backend/tests/dao/: conftest.py  test_time_standard_dao.py
backend/tests/services/: test_import_service.py
backend/tools/: dao_cli.py
data/time-standards/: ne-silvers.json
docs/: architecture.md  domain-model.md  feature-racing-suits.md  testing.md
scripts/: api.sh  bootstrap_admin.py  db.sh  env.sh  seed_time_standards.py
src/swimcuttimes/: __init__.py  config.py
src/swimcuttimes/api/: __init__.py  app.py  auth.py  dependencies.py
src/swimcuttimes/cli/: __init__.py  app.py  auth.py
src/swimcuttimes/dao/: base.py  meet_dao.py  swim_time_dao.py  swimmer_dao.py  team_dao.py  (+1 more)
supabase/: config.toml  seed.sql  seed_elise.sql
supabase/migrations/: 20260107000000_initial_schema.sql  20260108000000_add_splits.sql  20260108100000_auth_user_profiles.sql  20260108100001_auth_invitations.sql  20260108100002_auth_fan_follows.sql  20260108200000_unique_team_name.sql  20260109000000_enable_rls_all_tables.sql  20260110000000_fix_function_search_path.sql  20260111000000_meet_teams.sql  20260112000000_racing_suits.sql  20260112000001_seed_suits.sql  20260113000000_short_ids.sql
tests/api/: test_teams.py
tests/dao/: __init__.py
tools/: dao_cli.py
(+8 files in other folders)
